# reedact

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PROCESS.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: PROCESS_GUIDE.md  STYLE_GUIDE.md  TICKET_SYSTEM.md
docs/decisions/: 000-template.md  001-why-axum.md  002-why-tera.md  003-security-isolation-model.md  README.md  decisions.csv
docs/reference/: reedact-project.md
docs/tickets/: PLAN-TEMPLATE.md  TEMPLATE.md  board.csv
docs/tickets/done/: R01-0000.md  R01-0001-PLAN.md  R01-0001.md
scripts/: pre-commit-check.sh
src/: main.rs
src/server/: mod.rs
src/template/: mod.rs
